fix miner